# src/index.ts
@@ -1,6 +1,7 @@
 import express from "express";
 import authRouter from "./routes/authRoutes";
 import socioRouter from "./routes/socioRoutes";
+import usuarioRouter from "./routes/userRoutes";
 
 import swaggerUi from "swagger-ui-express";
 import fs from "node:fs";
@@ -21,6 +22,7 @@ if (fs.existsSync(swaggerDocumentPath)) {
 
 app.use("/auth", authRouter);
 app.use("/socios", socioRouter);
+app.use("/usuarios", usuarioRouter);
 
 app.listen(3000, () => {
   console.log(`servidor corriendo en http://localhost:3000`);
